# repo-detective-agent

./: .gitignore  DEMO_REPORT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_detective/: __init__.py  __main__.py  agent.py  cli.py  models.py  reporters.py  tools.py
tests/: test_agent.py
