[project]
name = "repo-detective-agent"
version = "0.1.0"
description = "A zero-API-key agent that investigates codebases and produces prioritized action reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "chenzixin", email = "2212294009@qq.com" }]
keywords = ["agent", "code-quality", "developer-tools", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
repo-detective = "repo_detective.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_detective"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
